--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <br>
   <!-- <p>Hello! 👋 I am a Postdoctoral AI Research Scientist at Meta (Codec Avatars Lab), where I am fortunate to work with <a href="https://shunsukesaito.github.io/">Shunsuke Saito</a>. Previously, I obtained my Ph.D. at <a href="https://kaist.ac.kr/">KAIST</a> advised by <a href="https://sites.google.com/view/tkkim/home">Tae-Kyun (T-K) Kim</a> and <a href="https://mhsung.github.io/">Minhyuk Sung</a>. In 2024, I visited <a href="https://about.meta.com/realitylabs/">Meta Reality Labs</a> as a research scientist intern, hosted by <a href="https://scholar.google.com/citations?user=ss-IvjMAAAAJ&hl=en">Jason Saragih</a>. -->
   
-  <p>Hello! 👋 I am a AI Researcher at Future AI Team, KLleon, where I am fortunate to work with <a href="https://gyeongmoon.github.io/">Gyeong-Moon Park</a>. Previously, I obtained my M.S. degree from the <a href="https://cse.unist.ac.kr/">Ulsan National Institute of Science and Technology (UNIST)</a>, where I was a member of the <a href="https://mip.postech.ac.kr/">3D Shape Analysis Lab</a> (currently, the MIP Lab in POSTECH), under the supervision of <a href="https://shape.postech.ac.kr/ilwoolyu/">Ilwoo Lyu</a>. In 2022, I also joined NAVER CLOVA at a research intern, which further expanded my experience in applied AI research.
+  <p>Hello! 👋 I am an AI Researcher at Future AI Team, KLleon, where I am fortunate to work with <a href="https://gyeongmoon.github.io/">Gyeong-Moon Park</a>. Previously, I obtained my M.S. degree from the <a href="https://cse.unist.ac.kr/">Ulsan National Institute of Science and Technology (UNIST)</a>, where I was a member of the <a href="https://mip.postech.ac.kr/">3D Shape Analysis Lab</a> (currently, the MIP Lab in POSTECH), under the supervision of <a href="https://shape.postech.ac.kr/ilwoolyu/">Ilwoo Lyu</a>. In 2022, I also joined NAVER CLOVA at a research intern, which further expanded my experience in applied AI research.
   </p>
 
   <p>My research lies at the intersection of computer vision and deep learning, with a particular focus on human-centric AI. My topics range from 3D human modeling and animation to 3D shape analysis, including surface registration and geometric deep learning on spherical manifolds.
@@ -247,7 +247,7 @@ Please stay tuned for what’s next!</li>
                 <img src="/resources/paper/mpmavatar.png" class="img-responsive" alt="">
               </div>
               <div class="description">
-                <p class="title">Joint Body-Face Neural Rigging for Expressive 3D Avatars</p>
+                <p class="title">Joint Body-Face Rigging for Expressive 3D Avatars</p>
                 <p class="authors"><b>Keyword: </b>3D Rigging, Data Creation/Collection, and Blender<br>
                 <p class="authors"><b>Project Member</b>: <u>Seungeun Lee</u></p>
                 <p class="resources"><a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> 
@@ -286,7 +286,7 @@ Please stay tuned for what’s next!</li>
           <ul class="ul-papers">
             <li>
               <div class="img">
-                <img src="/resources/paper/mpmavatar.png" class="img-responsive" alt="">
+                <img src="/resources/paper/dvdm.png" class="img-responsive" alt="">
               </div>
               <div class="description">
                   <p class="title">Distilling Video Diffusion Model to Animate Expressive 3D Humans from a Photo</p>
@@ -297,7 +297,7 @@ Please stay tuned for what’s next!</li>
 
             <li>
               <div class="img">
-                <img src="/resources/paper/origen.png" class="img-responsive" alt="">
+                <img src="/resources/paper/smaga.png" class="img-responsive" alt="">
               </div>
               <div class="description">
                 <p class="title">Secondary Motion-aware 3D Gaussian Avatars for Modeling Dynamic Appearances</p>
@@ -331,7 +331,7 @@ Please stay tuned for what’s next!</li>
                 <p class="venue">MICCAI, 2025<br>
                 <p class="resources">
                   <!-- <a href="https://kaistchangmin.github.io/MPMAvatar/">[Project]</a> <a href="https://papers.miccai.org/miccai-2025/paper/1268_paper.pdf">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a> -->
-                  <a href="https://papers.miccai.org/miccai-2025/paper/1268_paper.pdf">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a> <a href="/resources/paper/poster-sgcc.pdf">[Poster]</a>
+                  <a href="/resources/paper/poster-sgcc.pdf">[Poster]</a> <a href="https://papers.miccai.org/miccai-2025/paper/1268_paper.pdf">[Paper]</a> <a href="https://github.com/KAISTChangmin/MPMAvatar">[Code]</a> 
             <li>
               <div class="img">
                 <img src="/resources/paper/spharm-reg.png" class="img-responsive" alt="">
