--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ Please stay tuned for what’s next!</li>
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <h1>Preprint</h1>
+        <h1>Preprints</h1>
       </div>
       <div class="row">
           <ul class="ul-papers">
