--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <br>
   <!-- <p>Hello! 👋 I am a Postdoctoral AI Research Scientist at Meta (Codec Avatars Lab), where I am fortunate to work with <a href="https://shunsukesaito.github.io/">Shunsuke Saito</a>. Previously, I obtained my Ph.D. at <a href="https://kaist.ac.kr/">KAIST</a> advised by <a href="https://sites.google.com/view/tkkim/home">Tae-Kyun (T-K) Kim</a> and <a href="https://mhsung.github.io/">Minhyuk Sung</a>. In 2024, I visited <a href="https://about.meta.com/realitylabs/">Meta Reality Labs</a> as a research scientist intern, hosted by <a href="https://scholar.google.com/citations?user=ss-IvjMAAAAJ&hl=en">Jason Saragih</a>. -->
   
-  <p>Hello! 👋 I am an AI Researcher at Future AI Team, KLleon, where I am fortunate to work with <a href="https://gyeongmoon.github.io/">Gyeong-Moon Park</a>. Previously, I obtained my M.S. degree from the <a href="https://cse.unist.ac.kr/">Ulsan National Institute of Science and Technology (UNIST)</a>, where I was a member of the <a href="https://mip.postech.ac.kr/">3D Shape Analysis Lab</a> (currently, the MIP Lab in POSTECH), under the supervision of <a href="https://shape.postech.ac.kr/ilwoolyu/">Ilwoo Lyu</a>. In 2022, I also joined NAVER CLOVA at a research intern, which further expanded my experience in applied AI research.
+  <p>Hello! 👋 I am an AI Researcher at Future AI Team, <a href="https://www.klleon.io/">KLleon</a>, where I am fortunate to work with <a href="https://gyeongmoon.github.io/">Gyeong-Moon Park</a>. Previously, I obtained my M.S. degree from the <a href="https://cse.unist.ac.kr/">Ulsan National Institute of Science and Technology (UNIST)</a>, where I was a member of the <a href="https://mip.postech.ac.kr/">3D Shape Analysis Lab</a> (currently, the MIP Lab in POSTECH), under the supervision of <a href="https://shape.postech.ac.kr/ilwoolyu/">Ilwoo Lyu</a>. In 2022, I also joined NAVER CLOVA at a research intern, which further expanded my experience in applied AI research.
   </p>
 
   <p>My research lies at the intersection of computer vision and deep learning, with a particular focus on human-centric AI. My topics range from 3D human modeling and animation to 3D shape analysis, including surface registration and geometric deep learning on spherical manifolds.
@@ -257,7 +257,7 @@ Please stay tuned for what’s next!</li>
               </div>
               <div class="description">
                 <p class="title">Generalizable and Feed-forward Gaussian Model for Animatable 3D Talking Avatars</p>
-                <p class="authors"><b>Keyword: </b>Large Human Motion Data Capture/Processing/Training, Animatable 3D Avatars<br>
+                <p class="authors"><b>Keyword: </b>Large-scale Human Motion Data Capture/Processing/Training, Animatable 3D Avatars<br>
                   <p class="authors"><b>Project Member: </b><u>Seungeun Lee</u></p>
                 <p class="resources"><a href="https://origen2025.github.io/">[Project]</a> 
             <li>
@@ -326,7 +326,7 @@ Please stay tuned for what’s next!</li>
               </div>
               <div class="description">
                 <p class="title">Spherical Diffusion Process for Score-Guided Cortical Correspondence via Spectral Attention</p>
-                <p class="authors"><b>Keyword: </b>Cortical Surface Registration, Score-based Diffusion Process on the Sphere<br/></p>
+                <p class="authors"><b>Keyword: </b>Spherical Image Registration, Score-based Diffusion Process on the Sphere<br/></p>
                 <p class="authors"><b>Seungeun Lee</b>, Sergey Pyatkovskiy, Jaejun Yoo, Ilwoo Lyu<br/></p>
                 <p class="venue">MICCAI, 2025<br>
                 <p class="resources">
@@ -338,7 +338,7 @@ Please stay tuned for what’s next!</li>
               </div>
               <div class="description">
                 <p class="title">SPHARM-Reg: Unsupervised Cortical Surface Registration using Spherical Harmonics</p>
-                <p class="authors"><b>Keyword: </b>Cortical Surface Registration, Spherical Harmonic Analysis<br/></p>
+                <p class="authors"><b>Keyword: </b>Spherical Image Registration, Spherical Harmonic Analysis<br/></p>
                 <p class="authors"><b>Seungeun Lee</b>, Seunghwan Lee, Sunghwa Ryu, Ilwoo Lyu<br/></p>
                 <p class="venue">IEEE Transaction on Medical Imaging, 2025<br>
                 <p class="resources">
