--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ Please stay tuned for what’s next!</li>
                 <p class="authors"><b>Seungeun Lee</b>, Gyeong-Moon Park<br/></p>
                 <!-- <p class="venue">NeurIPS 2025<br> -->
                 <p class="resources">
-                  <a href="https://origen2025.github.io/">[Project]</a> <a href="/resources/paper/paper-smaga.pdf">[Paper]</a> 
+                  <a href="https://seungeunlee1228.github.io/projects/smaga">[Project]</a> <a href="/resources/paper/paper-smaga.pdf">[Paper]</a> 
           </ul>
       </div>
     </div>
