--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <div class="portrait-title">
         <h2>Seungeun Lee</h2>
       </div>
-          <a href="resources/cv.pdf"><b>CV</b></a> |
+          <a href="resources/cv_selee.pdf"><b>CV</b></a> |
           <a href="resources/cv.pdf"><b>Portfolio (Job Talk Slides) </b></a>
         <!-- | <a href="https://scholar.google.com/citations?user=UaMiOq8AAAAJ&hl=en"><b>Google Scholar</b></a>
         | <a href="https://github.com/jyunlee"><b>GitHub</b></a> <br>
@@ -161,7 +161,7 @@
   <br>
   <!-- <p>Hello! 👋 I am a Postdoctoral AI Research Scientist at Meta (Codec Avatars Lab), where I am fortunate to work with <a href="https://shunsukesaito.github.io/">Shunsuke Saito</a>. Previously, I obtained my Ph.D. at <a href="https://kaist.ac.kr/">KAIST</a> advised by <a href="https://sites.google.com/view/tkkim/home">Tae-Kyun (T-K) Kim</a> and <a href="https://mhsung.github.io/">Minhyuk Sung</a>. In 2024, I visited <a href="https://about.meta.com/realitylabs/">Meta Reality Labs</a> as a research scientist intern, hosted by <a href="https://scholar.google.com/citations?user=ss-IvjMAAAAJ&hl=en">Jason Saragih</a>. -->
   
-  <p>Hello! 👋 I am an AI Researcher at Future AI Team, <a href="https://www.klleon.io/">KLleon</a>, where I am fortunate to work with <a href="https://gyeongmoon.github.io/">Gyeong-Moon Park</a>. Previously, I obtained my M.S. degree from the <a href="https://cse.unist.ac.kr/">Ulsan National Institute of Science and Technology (UNIST)</a>, where I was a member of the <a href="https://mip.postech.ac.kr/">3D Shape Analysis Lab</a> (currently, the MIP Lab in POSTECH), under the supervision of <a href="https://shape.postech.ac.kr/ilwoolyu/">Ilwoo Lyu</a>. In 2022, I also joined NAVER CLOVA at a research intern, which further expanded my experience in applied AI research.
+  <p>Hello! 👋 I am an AI Researcher at Future AI Team, <a href="https://www.klleon.io/">KLleon</a>, where I am fortunate to work with <a href="https://gyeongmoon.github.io/">Gyeong-Moon Park</a>. Previously, I obtained my M.S. degree from the <a href="https://cse.unist.ac.kr/">Ulsan National Institute of Science and Technology (UNIST)</a>, where I was a member of the <a href="https://mip.postech.ac.kr/">3D Shape Analysis Lab</a> (currently, the MIP Lab in POSTECH), under the supervision of <a href="https://shape.postech.ac.kr/ilwoolyu/">Ilwoo Lyu</a>. In 2022, I also joined NAVER CLOVA at a research intern (<a href="/resources/certificate/certificate_naver.pdf">certificate</a>), which further expanded my experience in applied AI research.
   </p>
 
   <p>My research lies at the intersection of computer vision and deep learning, with a particular focus on human-centric AI. My topics range from 3D human modeling and animation to 3D shape analysis, including surface registration and geometric deep learning on spherical manifolds.
