--- a/projects/smaga/index.html
+++ b/projects/smaga/index.html
@@ -214,13 +214,13 @@
 
                   <div class="is-size-5 publication-authors">
                     <!-- TODO: Replace with your institution and conference/journal info -->
-                    <span class="author-block">KLleon<sup>1</sup>, Korea University<sup>2</sup><br>Preprint</span>
+                    <span class="author-block">KLleon<sup>1</sup>, Korea University<sup>2</sup></span>
                   </div>
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
                          <!-- TODO: Update with your arXiv paper ID -->
-                      <span class="link-block">
+                      <!-- <span class="link-block">
                         <a href="https://arxiv.org/pdf/2510.01619.pdf" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
@@ -228,10 +228,10 @@
                         </span>
                         <span>Paper</span>
                       </a>
-                    </span>
+                    </span> -->
 
                     <!-- TODO: Add your supplementary material PDF or remove this section -->
-                    <span class="link-block">
+                    <!-- <span class="link-block">
                       <a href="https://youtu.be/ytrKDNqACqM" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
@@ -239,7 +239,7 @@
                       </span>
                       <span>SuppVideo</span>
                     </a>
-                  </span>
+                  </span> -->
             </div>
           </div>
         </div>
